--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
-    <link rel="stylesheet" href="./css/jquery.fullpage.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/fullpage.js@2.9.4/dist/jquery.fullpage.min.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="./css/portfolio.css">
 
 
     <script src="./js/jquery-1.12.4.min.js"></script>
-    <script src="./js/jquery.fullpage.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullpage.js@2.9.4/dist/jquery.fullpage.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/portfolio.js"></script>
 
@@ -87,13 +87,13 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 01</strong>
-                    <h2><img src="./images/logo_fingersuit.svg" alt=""> <span>핑거수트</span></h2>
+                    <h2><img src="./images/logo_fingersuit.svg" alt="">핑거수트</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
                             <dt>Tool</dt>
-                            <dd>Vanilla Javascript, Swiper.js</dd>
+                            <dd> <span class="mc">Vanilla Javascript </span>, Swiper.js</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -108,9 +108,9 @@
                             <dt>Info</dt>
                             <dd class="desc">
                                 브랜드 자체의 모던하고 세련된 이미지를 살리기 위해
-                                </br> 모노톤의 색상을 사용하였습니다.
-                                </br> 또한 슬라이드를 적용하여 여러가지 상품이 최대한 많이
-                                </br> 노출될 수 있도록 디자인 하였습니다.
+                             모노톤의 색상을 사용하였습니다.
+                               또한 <span class="mc"> Swiper 슬라이드 </span>를 적용하여 여러가지 상품이 최대한 많이
+                             노출될 수 있도록 디자인 하였습니다.
                             </dd>
                         </dl>
                     </div>
@@ -142,13 +142,13 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 02</strong>
-                    <h2><img src="./images/logo_creverse.svg" alt=""> <span>크레버스 - 융합사고력 플랫폼</span></h2>
+                    <h2><img src="./images/logo_creverse.svg" alt="">크레버스 - 융합사고력 플랫폼</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd> <span class="mc"> Responsive Web </span></dd>
                             <dt>Tool</dt>
-                            <dd>React.js, Javascript(JQuery)</dd>
+                            <dd><span class="mc"> React.js </span>, Javascript(JQuery)</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -162,10 +162,11 @@
                             <dd>개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                아동, 청소년 교육 서비스의 컨셉에 맞게
-                                </br> 밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
-                                </br> 또한 섹션을 뚜렷하게 나누어
-                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
+                                <span class="mc"> React.js 를 사용하여 제작한</span> 교육 서비스 업체 사이트입니다.
+                              아동, 청소년의 눈높이에 맞추어
+                               밝고 높은 채도의 색감과 캐릭터를 활용하였습니다.
+                                 또한 섹션을 뚜렷하게 나누어
+                               효율적으로 정보를 전달 할 수 있도록 노력했습니다.
                             </dd>
                         </dl>
                     </div>
@@ -197,11 +198,11 @@
                     <div class="circle">
                     </div>
                     <strong>PROJECT 03</strong>
-                    <h2><img src="./images/logo_etude.png" alt=""> <span>에뛰드하우스 - 아모레퍼시픽</span></h2>
+                    <h2><img src="./images/logo_etude.png" alt="">에뛰드하우스 - 아모레퍼시픽</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Responsive Web</dd>
+                            <dd><span class="mc">Responsive Web</span></dd>
                             <dt>Tool</dt>
                             <dd>HTML5, CSS3, Javascript(JQuery)</dd>
                             <dt>Font</dt>
@@ -218,9 +219,9 @@
                             <dt>Info</dt>
                             <dd class="desc">
                                 브랜드의 대표 색상인 핑크를 활용해
-                                </br> 전반적으로 밝고 아기자기한 분위기를 조성하였습니다.
-                                </br> 다양한 형태의 슬라이드와 레이아웃을 활용해
-                                </br> 사용자에게 흥미를 유도할 수 있게 구성하였습니다.
+                              전반적으로 밝고 아기자기한 분위기를 조성하였습니다.
+                              다양한 형태의 슬라이드와 레이아웃을 활용해
+                            사용자에게 흥미를 유도할 수 있게 구성하였습니다.
                             </dd>
                         </dl>
                     </div>
@@ -244,13 +245,13 @@
                 <div class="description">
 
                     <strong>PROJECT 04</strong>
-                    <h2> <img src="./images/logo_eggdrop.png" alt=""> <span>에그드랍 홈페이지</span></h2>
+                    <h2> <img src="./images/logo_eggdrop.png" alt="">에그드랍 홈페이지</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
-                            <dd>Standard Web - Multipage</dd>
+                            <dd>Standard Web - <span class="mc"> Multipage</span></dd>
                             <dt>Tool</dt>
-                            <dd>CMS(그누보드), Javascript(JQuery), 카카오 api 활용</dd>
+                            <dd><span class="mc">CMS(그누보드)</span>, Javascript(JQuery), AOS, 카카오 api 활용</dd>
                             <dt>Font</dt>
                             <dd>Noto Sans KR</dd>
                             <dt>Color</dt>
@@ -264,11 +265,11 @@
                             <dd>개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                그누보드를 사용하여 메인페이지와 서브페이지를 제작하였습니다.
-                                </br> 다단메뉴로 구성해 사이트 내 서비스들을
-                                </br> 쉽게 볼 수 있도록 표시 했고
-                                </br> 또한 섹션을 뚜렷하게 나누어
-                                </br> 효율적으로 정보를 전달 할 수 있도록 노력했습니다.
+                                <span class="mc">그누보드를 사용하여 메인페이지와 서브페이지</span>를 제작하였습니다.
+                             다단메뉴로 구성해 사이트 내 서비스들을
+                             쉽게 볼 수 있도록 표시 했고
+                                또한 섹션을 뚜렷하게 나누어
+                               효율적으로 정보를 전달 할 수 있도록 노력했습니다.
                             </dd>
                         </dl>
                     </div>
@@ -301,15 +302,15 @@
                     </div>
 
                     <strong>PROJECT 05</strong>
-                    <h2><img src="./images/logo_spao.png" alt=""> <span>SPA 대표 브랜드 스파오 공식몰</span></h2>
+                    <h2><img src="./images/logo_spao.png" alt="">SPA 대표 브랜드 스파오 공식몰</h2>
                     <div class="txt_row">
                         <dl>
                             <dt>Type</dt>
                             <dd>Responsive Web</dd>
                             <dt>Tool</dt>
-                            <dd>CMS(영카트), Javascript(JQuery)</dd>
+                            <dd><span class="mc">CMS(영카트)</span>, Javascript(JQuery)</dd>
                             <dt>Font</dt>
-                            <dd>Noto Sans KR</dd>
+                            <dd> Noto Sans KR</dd>
                             <dt>Color</dt>
                             <dd>
                                 <span class="color c51"></span>
@@ -318,12 +319,12 @@
                                 <span class="color c54"></span>
                             </dd>
                             <dt>Work</dt>
-                            <dd>개인작업 100%</dd>
+                            <dd> 개인작업 100%</dd>
                             <dt>Info</dt>
                             <dd class="desc">
-                                영카트를 사용하여 메인페이지와 서브페이지를 제작한 쇼핑몰입니다.
-                                </br> 다양한 상품의 홍보가 중요한 쇼핑몰 특성에 맞추어
-                                </br> 메뉴 디자인과 레이아웃을 최대한 심플하게 제작하였습니다.
+                                <span class="mc"> 영카트를 사용하여 메인페이지와 서브페이지를 제작한</span> 쇼핑몰입니다.
+                              다양한 상품의 홍보가 중요한 쇼핑몰 특성에 맞추어
+                              메뉴 디자인과 레이아웃을 최대한 심플하게 제작하였습니다.
                             </dd>
                         </dl>
                     </div>
@@ -339,10 +340,10 @@
                 <h2>PROFILE</h2>
                 <div class="intro">
                     <div class="category">
-                        한유정
+                        INFO
                     </div>
                     <ul class="elements">
-                        <li>HANYUJEONG</li>
+                        <li>한유정</li>
                         <li>1993.01.16</li>
                         <li>신라대학교 영어교육과 졸업</li>
                         <li>프론트엔드 개발자 NCS 과정 수료</li>
